k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chrome-cell
  labels:
    app.kubernetes.io/name: chrome-cell
